# circuit-of-mana-ugdk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
scripts/: make-sheet.lua
src/: CMakeLists.txt
src/platformer/: CMakeLists.txt  body.cc  body.h  main.cc  render.cc  render.h  renderer.cc  renderer.h  tilemap.cc  tilemap.h
src/platformer/model/: body.cc  body.h  firematerial.cc  firematerial.h  material.h  solidmaterial.cc  solidmaterial.h
src/platformer/view/: blank.cc  blank.h  sprite.cc  sprite.h  stagerenderer.cc  stagerenderer.h  tilemap.cc  tilemap.h
src/ugdk/system/: config.h
